--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -514,6 +514,9 @@ strong {
 .mb70 {
   margin-bottom: 70px !important;
 }
+.mb100 {
+  margin-bottom: 100px !important;
+}
 .mb170 {
   margin-bottom: 170px !important;
 }
@@ -562,6 +565,9 @@ strong {
 .pt-zero {
   padding-top: 0px !important;
 }
+.pt10 {
+  padding-top: 10px !important;
+}
 .pt15 {
   padding-top: 15px !important;
 }
@@ -570,6 +576,9 @@ strong {
 }
 .pt30 {
   padding-top: 30px !important;
+}
+.pt35 {
+  padding-top: 35px !important;
 }
 .pt40 {
   padding-top: 40px !important;
@@ -612,6 +621,9 @@ strong {
 .pb-zero,
 .pb-none {
   padding-bottom: 0 !important;
+}
+.pb10 {
+  padding-bottom: 10px !important;
 }
 .pb40 {
   padding-bottom: 40px !important;
