--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -11,6 +11,83 @@ body {
     width: 0;
     height: 0;
 }
+.goTopbtn {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.width10p {
+    width: 10%;
+}
+.width20p {
+    width: 20%;
+}
+.width24p {
+    width: 24%;
+}
+.width25p {
+    width: 25%;
+}
+.width30p {
+    width: 30%;
+}
+.width35p {
+    width: 35%;
+}
+.width40p {
+    width: 40%;
+}
+.width45p {
+    width: 45%;
+}
+.width50p {
+    width: 50%;
+}
+.width55p {
+    width: 55%;
+}
+.width60p {
+    width: 60%;
+}
+.width65p {
+    width: 65%;
+}
+.width70p {
+    width: 70%;
+}
+.width74p {
+    width: 74%;
+}
+.width75p {
+    width: 75%;
+}
+.width80p {
+    width: 80%;
+}
+.width85p {
+    width: 85%;
+}
+.width90p {
+    width: 90%;
+}
+.width95p {
+    width: 95%;
+}
+.width100p {
+    width: 100%;
+}
+
+.mt1p {
+    margin-top: 1%;
+}
+.ml1p {
+    margin-left: 1%;
+}
+
+input {
+    border: 1px solid #d4d4d4;
+}
 
 /* Aside */
 #aside {
@@ -194,8 +271,7 @@ body {
     width: 100%;
 }
 
-
-/* Tabs : 공통 */
+/* Tabs : lineTab 공통 */
 .lineTabs {
     float: left;
     width: 100%;
@@ -241,8 +317,40 @@ body {
 }
 
 
+/* Tabs : buttonTab 공통 */
+.buttonTabs {
+    float: left;
+    width: 100%;
+    padding: 20px;
+}
+.buttonWrap {
+    height: 42px;
+}
+.buttonWrap li {
+    float: left;
+    height: 42px;
+    box-sizing: border-box;
+}
+.buttonWrap li a {
+    display: block;
+    width: 100%;
+    height: 42px;
+    line-height: 40px;
+    font-size: 18px;
+    color: #000;
+    text-align: center;
+    letter-spacing: 0;
+    border: 1px solid #e4e4e4;
+}
+.buttonWrap li a.on {
+    position: relative;
+    z-index: 2;
+    background: #1a8ccc;
+    font-weight: 600;
+    color: #fff;
+}
 
-/* lecProfTabs */
+/* Tabs : lecProfTabs */
 .lecProfWrap li {
     width: 50%;
 }
@@ -252,7 +360,7 @@ body {
     padding: 10px 0;
     border-top: 1px solid #e4e4e4;
 }
-.lecBox ul:first-child {
+.lecProfBox ul:first-child {
     border-top: none;
 }
 .lecProfBox ul li {
@@ -277,39 +385,9 @@ body {
     color: #707070;
 }
 
-
-/* noticeTabs */
-.noticeTabs {
-    float: left;
-    width: 92%;
-    margin: 20px 4% 40px;
-}
-.noticeWrap {
-    height: 42px;
-}
+/* Tabs : noticeTabs */
 .noticeWrap li {
-    float: left;
     width: 33.33333333%;
-    height: 42px;
-    box-sizing: border-box;
-}
-.noticeWrap li a {
-    display: block;
-    width: 100%;
-    height: 42px;
-    line-height: 40px;
-    font-size: 18px;
-    color: #000;
-    text-align: center;
-    letter-spacing: 0;
-    border: 1px solid #e4e4e4;
-}
-.noticeWrap li a.on {
-    position: relative;
-    z-index: 2;
-    background: #1a8ccc;
-    font-weight: 600;
-    color: #fff;
 }
 .noticeBox .List-Table li {
     font-size: 15px;
@@ -336,7 +414,7 @@ body {
 
 /* appPlayer */
 .appPlayer {
-    margin: 0 4%;
+    padding: 0 20px;
 }
 .appPlayer img {
     width: 100%;
@@ -362,6 +440,8 @@ body {
 
 
 /*********************************************     CONTAINER PAGE     *********************************************/
+
+/* 무한 PASS존 */
 .willbes-Tit {
     font-size: 20px;
     color: #323232;
@@ -371,6 +451,16 @@ body {
     height: 70px;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
+}
+.willbes-Tit button.goback {
+    background: url("../../../img/willbes/m/main/icon_goback.png") no-repeat 0 0;
+    width: 46px;
+    height: 46px;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    margin-top: -23px;
 }
 .willbes-Line {
     font-size: 20px;
@@ -382,9 +472,12 @@ body {
     padding-left: 20px;
 }
 .willbes-Lec-Selected {
+    height: 110px;
     padding: 30px 20px 20px;
 }
 .willbes-Lec-Selected select {
+    float: left;
+    font-size: 18px;
     height: 60px;
 }
 
@@ -454,11 +547,51 @@ body {
 .InfoBtn a {
     display: block;
     width: 100%;
-    height: 100%;
-    padding: 20px;
+    padding: 14px 18px;
+}
+.InfoBtn a span {
+    vertical-align: baseline;
+}
+.btnBox {
+    float: left;
+    margin: 20px;
+}
+.lecMore {
+    background: #f7f7f7;
+    height: 70px;
+    font-size: 20px;
+    color: #999;
+    text-align: center;
+    line-height: 70px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+.AddlecMore {
+    background: #1a8ccc;
+    height: 55px;
+    margin: 10px 20px;
+}
+.AddlecMore a {
+    display: block;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    line-height: 55px;
+}
+.lecMore a {
+    display: block;
+}
+.lecMore span {
+    vertical-align: baseline;
 }
 
-/* lecListTabs */
+/* Tabs : lecListTabs */
+.lecListTabs {
+    padding: 0;
+}
+.lecListWrap {
+    margin: 20px 20px 0;
+}
 .lecListWrap li {
     width: 33.33333333%;
 }
@@ -477,7 +610,7 @@ body {
     padding: 20px 30px;
 }
 
-
+/* 상태 공통 */
 .w-info dt .nBox {
     height: 20px;
     font-size: 12px;
@@ -498,6 +631,40 @@ body {
 .w-info dt .nBox.n4 {
     background: #333
 }
+
+/* 무한 PASS 추가하기 */
+.willbes-Lec-Search {
+    float: left;
+    font-size: 18px;
+}
+.willbes-Lec-Search .inputBox {
+    float: left;
+}
+.willbes-Lec-Search input[type="text"] {
+    height: 60px;
+}
+.willbes-Lec-Search button.search-Btn {
+    background: url("../../../img/willbes/m/main/icon_search_btn.png") no-repeat 0 0;
+    width: 60px;
+    height: 58px;
+    border: none;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+}
+.willbes-Lec-Search .reset-Btn {
+    background: #4f4f4f;
+    height: 60px;
+    font-size: 18px;
+    color: #fff;
+    text-align: center;
+    line-height: 60px;
+}
+.willbes-Lec-Search .reset-Btn a {
+    display: block;
+}
+
+
 
 
 
