모바일웹 > 내강의실 > 온라인강좌 페이지 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -670,10 +670,10 @@ strong {
   position: absolute;
 }
 .f_left {
-  float: left;
+  float: left !important;
 }
 .f_right {
-  float: right;
+  float: right !important;
 }
 .f_inherit {
   float: inherit !important;
