--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -499,6 +499,9 @@ strong {
 .mb20 {
   margin-bottom: 20px !important;
 }
+.mb25 {
+  margin-bottom: 25px !important;
+}
 .mb30 {
   margin-bottom: 30px !important;
 }
