--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -430,6 +430,9 @@ strong {
   margin: 0 auto;
 }
 
+.h22 {
+  height: 22px !important;
+}
 .h27 {
   height: 27px !important;
 }
@@ -438,6 +441,9 @@ strong {
 }
 .h36 {
   height: 36px !important;
+}
+.h42 {
+  height: 42px !important;
 }
 .h46 {
   height: 46px !important;
@@ -461,6 +467,9 @@ strong {
 }
 .mt30 {
   margin-top: 30px !important;
+}
+.mt35 {
+  margin-top: 35px !important;
 }
 .mt40 {
   margin-top: 40px !important;
@@ -504,6 +513,9 @@ strong {
 }
 .mb30 {
   margin-bottom: 30px !important;
+}
+.mb35 {
+  margin-bottom: 35px !important;
 }
 .mb40 {
   margin-bottom: 40px !important;
