--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -467,8 +467,6 @@ input {
 
 
 /*********************************************     CONTAINER PAGE     *********************************************/
-
-/* 무한 PASS존 */
 /* Tit : 공통 */
 .willbes-Tit {
     font-size: 20px;
@@ -637,6 +635,24 @@ input {
     text-align: center;
     line-height: 38px;
 }
+.lecTable .w-s-date {
+    background: #e9e9e9;
+    height: 70px;
+    font-size: 16px;
+    text-align: center;
+    margin: 0 -20px;
+    border-top: 1px solid #ccc;
+    line-height: 70px;
+}
+.lecTable .w-s-date input[type="text"] {
+    width: 20%; 
+    max-width: 120px;
+    height: 45px;
+}
+
+
+
+
 .lecTable .w-line {
     background: #e9e9e9;
     height: 15px;
@@ -748,6 +764,7 @@ input {
 }
 
 
+/* 무한 PASS존 */
 /* 무한 PASS존 : Tabs : lecListTabs */
 .lecListTabs {
     padding: 0;
@@ -982,6 +999,21 @@ input {
 .willbes-Open-Table .MoreBtn a img {
     margin: -4px 0;
 }
+
+/* 시작일변경 */
+.daysListTabs table tr td {
+    padding: 20px 0 !important;
+}
+.daysListTabs table tr td.w-num {
+    font-size: 18px;
+    text-align: center;
+}
+.daysListTabs table tr td .w-info {
+    line-height: 30px;
+}
+
+
+
 
 
 
