독서실신청현황/연장 페이지 추가 독서실 좌석 배치 : CSS 수정 / TEST 페이지 성 페이지 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -913,11 +913,12 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     float: left;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 .n_mem_seat li {
     float: left;
     list-style: none;
+    padding: 3px;
 }
 .n_mem_seat li button {
     width: 96%;
